murtaza.css
/* ... */
@keyframes hueShift {
    0% { filter: hue-rotate(0deg);}
    100% {filter: hue-rotate(360deg)};
}

.socialBox {
    margin-top: 2%;
    margin-left: 2%;
    display: flex;
    flex-direction: column;
    color: white;
    align-items: center;
    background-color: rgba(255, 109, 109, 0.8);
    box-shadow:  2px 2px rgb(196, 195, 195);
}

.statusBox {
    margin-top: 2%;
    margin-left: 2%;
    margin-right: 1%;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
    background-color: rgba(255, 109, 109, 0.8);
    box-shadow:  2px 2px rgb(196, 195, 195);
}

.socialDiv {
    visibility: hidden;
    border-radius: 50px;
    width: 85%;
    height: 50%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    background-color: rgba(255, 109, 109, 0.8);
}


.aboutMe h1 {
    font-size: 125%;
}

.socialBox h1 {
    font-size: 80%;
}

.statusBox h1 {
    font-size: 80%;
}

.statusBox p {
    visibility: hidden;
    transition: 0.3s ease-in-out all;
}

.profilePic {
    width: 75px;
    height: 75px;
    object-fit: cover;
    background-size: cover;
    background-position: center;
    visibility: visible;
    margin-left: 7%;
    user-select: none;
    position: absolute;
    border-radius: 50%;
    border: 1.5px solid orange;

    transition: 0.3s ease-in-out all;
}

@media (max-width: 767px){
    .boxes {
        border-radius: 25px;
    }
    .socialBox {
        height: 40px;
        width: 80px;
        border-radius: 25px;
    }
    .statusBox {
        height: 40px;
        width: 80px;
        border-radius: 25px;
    }
    .aboutMe {
        height: 40px;
        width: 100px;
        border-radius: 25px;
        overflow-y: scroll;
        font-size: 60%;
    }
}

@media(min-width: 768px){
.profilePic {
    visibility: visible;
    margin-left: 3%;
    margin-bottom: 0;
    position: fixed;
    border-radius: 50%;
    width: 125px;
    height: 125px;
    object-fit: cover;
    border: 1.5px solid orange;
    box-shadow: 2px 2px 2px rgb(255, 157, 45);
}

.boxes {
    overflow-y: hidden;
}

.socialBox {
    height: 60%;
    width: 30%;
    box-shadow:  3px 3px rgb(196, 195, 195);
}

.aboutMe {
    height: 60%;
    width: 35%;
    box-shadow:  3px 3px rgb(196, 195, 195);
}

.statusBox {
    width: 25%;
    height: 60%;
    box-shadow:  3px 3px rgb(196, 195, 195);
}

.boxes div {
    border-radius: 25px;
}

.socialDiv i {
    color: white;
    font-size: 50px;
}
.profileBoxInner:hover .aboutMe {
    height: 90%;
    width: 35%;
}
.profileBox:hover .socialBox .socialDiv {
    visibility: visible;
}
.profileBoxInner:hover .statusBox p {
    font-size: 100%;
    visibility: visible;
     font-family: "Coiny", system-ui;
  font-weight: 700;
  font-style: normal;
  color: transparent;
    background: linear-gradient(90deg,blue,cyan,blue);
    background-size: 300%;
    background-clip: text;

    animation: statusHueShift 5s linear infinite;
}

.aboutMe h1 {
    margin-top: 6%;
    font-size: 150%;
}

.socialBox h1 {
    font-size: 150%;
}

.statusBox h1 {
    font-size: 150%;
}

}

@keyframes statusHueShift {
    0% { background-position: 0%;}
    100% { background-position: 300%;}
}

@media (min-width: 768px){
    .profileBox {
        width: 1000px;
        height: 320px;
    }

    .profileBox:hover {
        height: 650px;
    }

    .profileBox:hover .profilePic {
        margin-top: 2%;
    }

    .profileBox:hover .aboutMe p {
        visibility: visible;
    }

    .profilePic {
        height: 150px;
        width: 150px;

        transition: 0.2s ease-in-out all;
    }
}


nav h2 {
    font-size: 125%;
  font-family: "Madimi One", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.boxesText {
    margin-top: 8%;
    font-size: 125%;
  font-family: "Madimi One", sans-serif;
  font-weight: 700;
  font-style: normal;
}


@keyframes ripple {
    0% { height: 0%; width: 0%;}
    100% { width: 100%; height: 100%;}
}


.innerCircle {
    height: 100%;
    width: 100%;
    visibility: visible;
    border-radius: 50%;
    background-color: rgba(255, 123, 0, 0.8);
}

.circle {
    position: absolute;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    background-color:  rgba(255, 153, 0, 0.8);
}

@keyframes upNDown {
    0% { transform: translateY(0);}
    50% { transform: translateY(var(--transVar));}
    75% { transform: translateY(0);}
    90% { transform: translateY(calc(var(--transVar) + 5px));}
    100% { transform: translateY(0);}
}

.innerViewBox {
    display: flex;
    justify-content: center;
    align-items: center;
}

.viewBox {
    overflow: hidden;
    z-index: 4;
    position: fixed;
    right: 10%;
    top: 22%;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 300px;
    height: 50%;
    border-radius: 50px;
    background-color: rgba(240,248,255,0.9);
}

.artworkView {
    z-index: 7;
    visibility: hidden;
    border-radius: 25px;
    background-color: aquamarine;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
    height: 90%;

    transition: 0.3s ease-in-out all;
}

.artworkView h1 {
    margin: 0;
    margin-bottom: 2%;
    text-shadow: 2px 2px orange;
    font-size: 200%;
  font-family: "Madimi One", sans-serif;
  font-weight: 700;
  font-style: normal;

  color: transparent;
  background: linear-gradient(90deg, rgba(255, 109, 109, 0.8), rgba(255, 255, 255, 0.8), rgba(255, 109, 109, 0.8));
  background-size: 250%;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;

  animation: statusHueShift 8s linear infinite;
}

.artDiv {
    border: 2px solid orange;
    border-radius: 25px;
    height: 90%;
    width: 90%;
    padding-right: 1%;
    background-color: rgba(255, 109, 109);
    display: flex;
    flex-wrap: wrap;
    overflow-y: auto;
    overflow-x: hidden;
}
/* ... */

